Fix league leaders going onto two lines on Firefox within nav bar

--- a/src/components/Globals/Nav/Nav.scss
+++ b/src/components/Globals/Nav/Nav.scss
@@ -35,6 +35,7 @@
     font-size: 1.25rem;
     padding: 0.5rem 0;
     margin: 0;
+    white-space: nowrap;
 
     &-text {
       @include biggerp;
